<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <!--Teks Judul-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/arabic_arihna"
        android:text="@string/title"
        android:textColor="@color/blue"
        android:textSize="32sp"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Slider Img-->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp_article"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="16dp" />

            <!--Slider Dots-->
            <LinearLayout
                android:id="@+id/ll_slider_dots"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_dashboard_menu"
                android:orientation="vertical"
                android:padding="16dp">

                <!--(Title)Kumpulan Doa & Dzikir Sehari-Hari-->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="@font/arabic_arihna"
                    android:text="@string/txt_judul_fitur"
                    android:textColor="@color/blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--Sunnah Qauliyah Dzikir & Doa Shalat-->
                <LinearLayout
                    android:id="@+id/ll_dzikir_doa_shalat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_qauliyah_shalat"
                        android:src="@drawable/ic_doa" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_sunnah_qauliyah"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <!--Dzikir Setiap Saat-->
                <LinearLayout
                    android:id="@+id/ll_dzikir_setiap_saat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_dzikir_setiap_saat"
                        android:src="@drawable/ic_time" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_dzikir_setiap_saat"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dzikir_doa_harian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_dzikir_doa_harian"
                        android:src="@drawable/ic_doa" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_dzikir_doa_harian"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_dzikir_pagi_petang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/bg_item"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:contentDescription="@string/content_txt_icon_dzikir_pagi_petang"
                        android:src="@drawable/ic_pagi_petang" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:text="@string/txt_dzikir_pagi_petang"
                        android:textColor="@color/blue"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>