<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.PagiPetangDzikirActivity">

    <TextView
        android:id="@+id/tv_dzikir_pagi_petang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_menu"
        android:gravity="bottom"
        android:padding="16dp"
        android:text="@string/txt_dzikir_pagi_petang"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikir_pagi"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_dzikir_petang"
        app:layout_constraintTop_toBottomOf="@id/tv_dzikir_pagi_petang"
        app:layout_constraintVertical_chainStyle="spread">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_txt_icon_image_for_background_dzikir"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_morning" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="8dp"
            android:text="@string/txt_dzikir_pagi"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/img_btn_dzikir_pagi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_txt_icon_btn_dzikir_petang"
            android:src="@drawable/bg_btn_dzikir"
            tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_dzikir_petang"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_dzikir_pagi">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/content_txt_icon_image_for_background_dzikir"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_evening"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:padding="8dp"
            android:text="@string/txt_dzikir_petang"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/img_btn_dzikir_petang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_txt_icon_btn_dzikir_petang"
            android:src="@drawable/bg_btn_dzikir"
            tools:ignore="ImageContrastCheck" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>